--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,8 +11,100 @@
     <artifactId>camunda-release-parent</artifactId>
     <version>1</version>
     <!-- do not remove empty tag - http://jira.codehaus.org/browse/MNG-4687 -->
-   <relativePath />
+    <relativePath />
   </parent>
+
+  <profiles>
+    <profile>
+      <id>node-build-windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>generate-zip</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <inherited>false</inherited>
+                <configuration>
+                  <tasks>
+                    <!-- run node build -->
+                    <exec executable="cmd">
+                      <arg value="/c" />
+                      <arg value="npm" />
+                      <arg value="install" />
+                    </exec>
+                    <exec executable="cmd">
+                      <arg value="/c" />
+                      <arg value="node_modules\.bin\bower.cmd" />
+                      <arg value="install" />
+                    </exec>
+                    <exec executable="cmd">
+                      <arg value="/c" />
+                      <arg value="node_modules\.bin\grunt.cmd" />
+                      <arg value="build" />
+                      <arg value="--color=false" />
+                    </exec>
+                  </tasks>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>node-build-unix</id>
+      <activation>
+        <os>
+          <family>!windows</family>
+        </os>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>generate-zip</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <inherited>false</inherited>
+                <configuration>
+                  <tasks>
+                    <!-- run node build -->
+                    <exec executable="npm">
+                      <arg value="install" />
+                    </exec>
+                    <exec executable="./node_modules/bower/bin/bower">
+                      <arg value="install" />
+                    </exec>
+                    <exec executable="./node_modules/grunt-cli/bin/grunt">
+                      <arg value="build" />
+                      <arg value="--color=false" />
+                    </exec>
+                  </tasks>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <build>
     <plugins>
@@ -30,21 +122,6 @@
             <inherited>false</inherited>
             <configuration>
               <tasks>
-
-                <!-- run node build -->
-                <exec executable="npm">
-                  <arg value="install"/>
-                </exec>
-                <exec executable="npm">
-                  <arg value="run-script"/>
-                  <arg value="test"/>
-                </exec>
-                <exec executable="npm">
-                  <arg value="run-script"/>
-                  <arg value="dist"/>
-                </exec>
-
-                <!-- package zip -->
                 <mkdir dir="${basedir}/target/" />
                 <zip destfile="${basedir}/target/dist.zip" basedir="dist/" />
               </tasks>
@@ -75,7 +152,6 @@
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
 
