--- a/client/package.json
+++ b/client/package.json
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/camunda/camunda-bpm-webapp/issues"
   },
-  "homepage": "https://github.com/camunda/camunda-bpm-webapp"
+  "homepage": "https://github.com/camunda/camunda-bpm-webapp",
+  "devDependencies": {
+    "grunt-parallel": "~0.3.1",
+    "grunt": "~0.4.5",
+    "load-grunt-tasks": "~0.6.0",
+    "time-grunt": "~0.4.0"
+  }
 }
