--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,9 @@
     "requirejs-angular-define": "git://github.com/camunda/requirejs-angular-define.git",
     "time-grunt": "~0.2.1",
     "underscore": "~1.5.2"
+  },
+  "dependencies": {
+    "grunt-cli": "~0.1.13",
+    "grunt": "~0.4.5"
   }
 }
