chore(deps): update protractor version
version upgrade to 1.0.0

--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,6 @@
     "grunt": "~0.4.5",
     "load-grunt-tasks": "~0.6.0",
     "time-grunt": "~0.4.0",
-    "protractor": "~1.0.0-rc6"
+    "protractor": "~1.0.0"
   }
 }
