--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -1,18 +1,7 @@
 {
   "globals": {
-    "browser": false,
-    "element": false,
-    "by": false,
-    "describe": false,
-    "xdescribe": false,
-    "ddescribe": false,
-    "it": false,
-    "xit": false,
-    "expect": false,
-    "beforeEach": false,
-    "afterEach": false,
-    "runs": false,
-    "waitsFor": false
+    "define": false,
+    "require": false
   },
   "node": true,
   "browser": true,
