improve(grunt): copy example forms to target dir when they change

--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "grunt": "~0.4.5",
     "load-grunt-tasks": "~0.6.0",
     "time-grunt": "~0.4.0",
-    "protractor": "~1.0.0"
+    "protractor": "~1.0.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
