chore(plugin/jobdef): include jobdef plugin
- include jobdef plugin
- remove obsolete resources

related to #CAM-2615

--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>camunda-cockpit-plugin-base</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.camunda.bpm.cockpit</groupId>
+      <artifactId>camunda-cockpit-plugin-jobdef</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <!-- jee spec -->
     <dependency>
