chore(build): consume sdk snapshot using bower
related to #CAM-2703

--- a/client/bower.json
+++ b/client/bower.json
@@ -39,7 +39,8 @@
     "hyperagent": "*",
     "jquery": "2.1.1",
     "requirejs-domready": "2.0.1",
-    "bpmn-js": "~0.4.1"
+    "bpmn-js": "~0.4.1",
+    "camunda-bpm-sdk-js": "camunda/bower-camunda-bpm-sdk-js#7.2.0-SNAPSHOT"
   },
   "devDependencies": {
     "jquery-mockjax": "1.5.3",
