--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "time-grunt": "~0.4.0",
     "protractor": "~1.0.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-newer": "~0.7.0"
   }
 }
