chore(maven): replace camunda-bom with camunda-parent
related to #CAM-2860

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -63,7 +63,7 @@
     <dependencies>
       <dependency>
         <groupId>org.camunda.bpm</groupId>
-        <artifactId>camunda-bom</artifactId>
+        <artifactId>camunda-parent</artifactId>
         <version>${project.version}</version>
         <scope>import</scope>
         <type>pom</type>
