--- a/client/distro/jboss-standalone/pom.xml
+++ b/client/distro/jboss-standalone/pom.xml
@@ -34,6 +34,10 @@
       <artifactId>camunda-identity-ldap</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.camunda.spin</groupId>
+      <artifactId>camunda-spin-all</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
