--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -91,6 +91,11 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.camunda.spin</groupId>
+      <artifactId>camunda-spin-all</artifactId>
+    </dependency>
+
     <!-- rest api -->
     <dependency>
       <groupId>org.camunda.bpm</groupId>
