Update scheme to "git" instead of "git+ssh:"
Hi,

Please change the scheme to git instead of "git+ssh". The latter would try to validate the certificate and fails to do an "npm install". Please do the needful.

-Nibin

--- a/client/package.json
+++ b/client/package.json
@@ -62,7 +62,7 @@
     "uuid": "~1.4.1"
   },
   "devDependencies": {
-    "camunda-commons-ui": "git+ssh://git@github.com:camunda/camunda-commons-ui",
+    "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui",
     "load-grunt-tasks": "~0.4.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-newer": "~0.7.0"
