--- a/client/bower.json
+++ b/client/bower.json
@@ -40,7 +40,8 @@
     "jquery": "2.1.1",
     "bpmn-js": "~0.5.1",
     "angular-data-depend": "git@github.com:camunda-third-party/angular-data-depend.git",
-    "camunda-bpm-sdk-js": "git@github.com:camunda/bower-camunda-bpm-sdk-js#7.2.0-SNAPSHOT"
+    "camunda-bpm-sdk-js": "git@github.com:camunda/bower-camunda-bpm-sdk-js#7.2.0-SNAPSHOT",
+    "Placeholders.js": "~3.0.2"
   },
   "devDependencies": {
     "jquery-mockjax": "1.5.3",
