--- a/client/distro/tomcat-standalone/pom.xml
+++ b/client/distro/tomcat-standalone/pom.xml
@@ -38,6 +38,10 @@
       <artifactId>camunda-spin-all</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.camunda.connect</groupId>
+      <artifactId>camunda-connect-all</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
     </dependency>
