--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -353,6 +353,10 @@
           <artifactId>camunda-spin-all</artifactId>
         </dependency>
         <dependency>
+          <groupId>org.camunda.connect</groupId>
+          <artifactId>camunda-connect-all</artifactId>
+        </dependency>
+        <dependency>
           <groupId>org.camunda.bpm.identity</groupId>
           <artifactId>camunda-identity-ldap</artifactId>
           <version>${project.version}</version>
