chore(standalone): add spin process engine plugin
- also adds plugin to dev setup

related to CAM-2966

--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -354,6 +354,10 @@
           <artifactId>camunda-engine</artifactId>
         </dependency>
         <dependency>
+          <groupId>org.camunda.spin</groupId>
+          <artifactId>camunda-spin-all</artifactId>
+        </dependency>
+        <dependency>
           <groupId>org.camunda.bpm.identity</groupId>
           <artifactId>camunda-identity-ldap</artifactId>
           <version>${project.version}</version>
