--- a/client/bower.json
+++ b/client/bower.json
@@ -41,7 +41,8 @@
     "bpmn-js": "0.5.1-1-viewer-fixes",
     "angular-data-depend": "git@github.com:camunda-third-party/angular-data-depend.git",
     "camunda-bpm-sdk-js": "git@github.com:camunda/bower-camunda-bpm-sdk-js#7.2.0-SNAPSHOT",
-    "Placeholders.js": "~3.0.2"
+    "Placeholders.js": "~3.0.2",
+    "angular-translate-loader-static-files": "~2.4.2"
   },
   "devDependencies": {
     "jquery-mockjax": "1.5.3",
