--- a/client/bower.json
+++ b/client/bower.json
@@ -55,6 +55,7 @@
   },
   "resolutions": {
     "jquery": "2.1.1",
-    "angular": "1.2.16"
+    "angular": "1.2.16",
+    "angular-translate": "~2.4.2"
   }
 }
