--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -378,6 +378,10 @@
           <version>${project.version}</version>
         </dependency>
         <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-jdk14</artifactId>
+        </dependency>
+        <dependency>
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
         </dependency>
