--- a/client/package.json
+++ b/client/package.json
@@ -27,11 +27,11 @@
     "prodTarget": "dist",
     "devTarget":  "dist/app/tasklist"
   },
-  "dependencies": {
+  "devDependencies": {
     "amdefine": "~0.1.0",
     "bower": "~1.3.6",
+    "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui",
     "cheerio": "~0.16.0",
-    "fixturer": "camunda-third-party/fixturer",
     "grunt": "~0.4.5",
     "grunt-bower-task": "~0.3.4",
     "grunt-cli": "~0.1.13",
@@ -43,28 +43,13 @@
     "grunt-contrib-requirejs": "~0.4.4",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-conventional-changelog": "~1.1.0",
-    "grunt-jasmine-node": "~0.2.1",
     "grunt-jsdoc": "~0.5.4",
-    "grunt-karma": "~0.8.3",
     "grunt-newer": "~0.7.0",
     "jquery": "~2.1.1",
-    "karma-chrome-launcher": "~0.1.3",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-ie-launcher": "~0.1.5",
-    "karma-jasmine": "~0.1.5",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-requirejs": "~0.2.1",
     "load-grunt-tasks": "~0.4.0",
     "q": "~1.0.1",
     "requirejs": "~2.1.11",
     "underscore": "~1.6.0",
-    "underscore.string": "~2.3.3",
-    "uuid": "~1.4.1"
-  },
-  "devDependencies": {
-    "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui",
-    "load-grunt-tasks": "~0.4.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-newer": "~0.7.0"
+    "underscore.string": "~2.3.3"
   }
 }
