--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,6 @@
     "amdefine": "~0.1.0",
     "bower": "~1.3.6",
     "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui",
-    "cheerio": "~0.16.0",
     "grunt": "~0.4.5",
     "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.5.0",
@@ -44,11 +43,8 @@
     "grunt-conventional-changelog": "~1.1.0",
     "grunt-jsdoc": "~0.5.4",
     "grunt-newer": "~0.7.0",
-    "jquery": "~2.1.1",
     "load-grunt-tasks": "~0.4.0",
-    "q": "~1.0.1",
     "requirejs": "~2.1.11",
-    "underscore": "~1.6.0",
-    "underscore.string": "~2.3.3"
+    "underscore": "~1.6.0"
   }
 }
