chore(bower): update bower dependencies
Related to: CAM-3103

--- a/client/package.json
+++ b/client/package.json
@@ -25,26 +25,23 @@
     "livereloadPort": 8011,
     "clientDir": "client",
     "prodTarget": "dist",
-    "devTarget":  "dist/app/tasklist"
+    "devTarget": "dist/app/tasklist"
   },
   "devDependencies": {
-    "amdefine": "~0.1.0",
-    "bower": "~1.3.6",
+    "amdefine": "0.1.0",
+    "bower": "1.3.12",
     "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui",
-    "grunt": "~0.4.5",
-    "grunt-cli": "~0.1.13",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-less": "~0.11.0",
-    "grunt-contrib-requirejs": "~0.4.4",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-conventional-changelog": "~1.1.0",
-    "grunt-jsdoc": "~0.5.4",
-    "grunt-newer": "~0.7.0",
-    "load-grunt-tasks": "~0.4.0",
-    "requirejs": "~2.1.11",
-    "underscore": "~1.6.0"
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-clean": "0.5.0",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-less": "0.11.0",
+    "grunt-contrib-requirejs": "0.4.4",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-newer": "0.7.0",
+    "load-grunt-tasks": "0.4.0",
+    "requirejs": "2.1.11",
+    "underscore": "1.6.0"
   }
 }
