--- a/client/bower.json
+++ b/client/bower.json
@@ -27,31 +27,22 @@
     "test",
     "tests"
   ],
-  "dependencies": {
+  "devDependencies": {
     "angular": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-bootstrap": "0.11.0",
     "angular-moment": "0.7.0",
     "angular-route": "1.2.16",
-    "angular-translate": "~2.2.0",
-    "angular-sanitize": "~1.2.16",
-    "bootstrap": "~3.1.1",
-    "hyperagent": "*",
+    "angular-translate": "2.4.2",
+    "angular-sanitize": "1.2.16",
+    "bootstrap": "3.1.1",
     "jquery": "2.1.1",
     "bpmn-js": "0.5.1-1-viewer-fixes",
     "angular-data-depend": "git@github.com:camunda-third-party/angular-data-depend.git",
     "camunda-bpm-sdk-js": "git@github.com:camunda/bower-camunda-bpm-sdk-js#7.2.0-SNAPSHOT",
-    "Placeholders.js": "~3.0.2",
-    "angular-translate-loader-static-files": "~2.4.2"
-  },
-  "devDependencies": {
-    "underscore": "./node_modules/underscore/underscore.js",
-    "requirejs-json": "~0.0.3",
+    "Placeholders.js": "3.0.2",
+    "angular-translate-loader-static-files": "2.4.2",
+    "requirejs-json": "0.0.3",
     "requirejs-text": "2.0.12"
-  },
-  "resolutions": {
-    "jquery": "2.1.1",
-    "angular": "1.2.16",
-    "angular-translate": "~2.4.2"
   }
 }
