--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -8,17 +8,13 @@
   },
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-bower-task": "~0.3.4",
     "grunt-cli": "~0.1.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-requirejs": "*",
     "grunt-contrib-watch": "~0.5.0",
-    "grunt-mkdir": "^0.1.1",
-    "grunt-open": "~0.2.0",
+    "load-grunt-tasks": "0.4.0",
     "requirejs": "~2.1.0",
     "requirejs-angular-define": "git://github.com/camunda/requirejs-angular-define.git",
-    "load-grunt-tasks": "0.4.0",
-    "bower": "~1.3.6"
+    "requirejs-text": "^2.0.12"
   }
 }
