--- a/client/webapp/src/main/runtime/jboss/webapp/WEB-INF/web.xml
+++ b/client/webapp/src/main/runtime/jboss/webapp/WEB-INF/web.xml
@@ -12,6 +12,11 @@
     <listener-class>org.camunda.bpm.admin.impl.web.bootstrap.AdminContainerBootstrap</listener-class>
   </listener>
 
+  <!-- tasklist bootstrap listener -->
+  <listener>
+    <listener-class>org.camunda.bpm.tasklist.impl.web.bootstrap.TasklistContainerBootstrap</listener-class>
+  </listener>
+
   <!-- Authentication filter -->
   <filter>
     <filter-name>Authentication Filter</filter-name>
@@ -22,7 +27,7 @@
     <url-pattern>/*</url-pattern>
     <dispatcher>REQUEST</dispatcher>
   </filter-mapping>
-  
+
   <!-- Security filter -->
   <filter>
     <filter-name>SecurityFilter</filter-name>
@@ -76,7 +81,7 @@
     <servlet-name>Cockpit Api</servlet-name>
     <url-pattern>/api/cockpit/*</url-pattern>
   </servlet-mapping>
-  
+
   <!-- admin rest api -->
   <servlet>
     <servlet-name>Admin Api</servlet-name>
@@ -93,6 +98,24 @@
   <servlet-mapping>
     <servlet-name>Admin Api</servlet-name>
     <url-pattern>/api/admin/*</url-pattern>
+  </servlet-mapping>
+
+  <!-- tasklist rest api -->
+  <servlet>
+    <servlet-name>Tasklist Api</servlet-name>
+    <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
+    <init-param>
+      <param-name>javax.ws.rs.Application</param-name>
+      <param-value>org.camunda.bpm.tasklist.impl.web.TasklistApplication</param-value>
+    </init-param>
+    <init-param>
+      <param-name>resteasy.servlet.mapping.prefix</param-name>
+      <param-value>/api/tasklist</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Tasklist Api</servlet-name>
+    <url-pattern>/api/tasklist/*</url-pattern>
   </servlet-mapping>
 
   <!-- engine rest api (embedded) -->
