--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,17 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.camunda.bpm.webapp</groupId>
   <artifactId>camunda-webapp-root</artifactId>
-  <version>7.3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>camunda BPM - webapp - root</name>
 
-  <!-- camunda BPM parent release pom -->
   <parent>
-    <groupId>org.camunda</groupId>
-    <artifactId>camunda-release-parent</artifactId>
-    <version>2.5</version>
-    <!-- do not remove empty tag - http://jira.codehaus.org/browse/MNG-4687 -->
-    <relativePath />
+    <groupId>org.camunda.bpm</groupId>
+    <artifactId>camunda-database-settings</artifactId>
+    <version>7.3.0-SNAPSHOT</version>
   </parent>
 
   <profiles>
@@ -61,13 +57,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.camunda.bpm</groupId>
-        <artifactId>camunda-parent</artifactId>
-        <version>${project.version}</version>
-        <scope>import</scope>
-        <type>pom</type>
-      </dependency>
       <dependency>
         <groupId>org.camunda.bpm.webapp</groupId>
         <artifactId>camunda-webapp-core</artifactId>
@@ -130,12 +119,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.7</version>
+          <version>1.8</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.7</version>
+          <version>1.9.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
