--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,6 +11,7 @@
     <groupId>org.camunda.bpm</groupId>
     <artifactId>camunda-database-settings</artifactId>
     <version>7.3.0-SNAPSHOT</version>
+    <relativePath />
   </parent>
 
   <profiles>
