--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "name": "camunda-tasklist-ui",
   "version": "7.3.0-SNAPSHOT",
   "private": true,
+  "scripts": {
+    "win-build-sdk": "node_modules\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\node_modules\\grunt-cli\\bin\\grunt --gruntfile=node_modules\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\Gruntfile.js browserify:distAngular",
+    "build-sdk": "node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/node_modules/grunt-cli/bin/grunt --gruntfile=node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/Gruntfile.js browserify:distAngular"
+  },
   "gruntConfig": {
     "connectPort": 8010,
     "livereloadPort": 8011,
@@ -10,7 +14,7 @@
     "devTarget": "dist/app/tasklist"
   },
   "dependencies": {
-    "camunda-commons-ui": "camunda/camunda-commons-ui"
+    "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui#master"
   },
   "devDependencies": {
     "amdefine": "0.1.0",
