--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "7.3.0-SNAPSHOT",
   "private": true,
   "scripts": {
-    "win-build-sdk": "node_modules\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\node_modules\\grunt-cli\\bin\\grunt --gruntfile=node_modules\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\Gruntfile.js browserify:distAngular",
-    "build-sdk": "node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/node_modules/grunt-cli/bin/grunt --gruntfile=node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/Gruntfile.js browserify:distAngular"
+    "win-build-sdk": "node_modules\\grunt-cli\\bin\\grunt --gruntfile=node_modules\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\Gruntfile.js browserify:distAngular",
+    "build-sdk": "node_modules/grunt-cli/bin/grunt --gruntfile=node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/Gruntfile.js browserify:distAngular"
   },
   "gruntConfig": {
     "connectPort": 8010,
