--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.camunda.bpm</groupId>
     <artifactId>camunda-database-settings</artifactId>
     <version>7.3.0-SNAPSHOT</version>
-    <relativePath />
+    <relativePath>../camunda-bpm-platform/database</relativePath>
   </parent>
 
   <profiles>
