impr(package): set fixed version number of dependencies
Related to: CAM-3334

--- a/client/webapp/package.json
+++ b/client/webapp/package.json
@@ -4,14 +4,14 @@
     "pluginDir": "src/main/resources-plugin"
   },
   "devDependencies": {
-    "grunt": "~0.4.0",
-    "grunt-cli": "~0.1.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-requirejs": "*",
-    "grunt-contrib-watch": "~0.5.0",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-clean": "0.5.0",
+    "grunt-contrib-requirejs": "0.4.4",
+    "grunt-contrib-watch": "0.5.0",
     "load-grunt-tasks": "0.4.0",
-    "requirejs": "~2.1.0",
+    "requirejs": "2.1.0",
     "requirejs-angular-define": "git://github.com/camunda/requirejs-angular-define.git",
-    "requirejs-text": "^2.0.12"
+    "requirejs-text": "2.0.12"
   }
 }
