--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -1,11 +1,8 @@
 {
   "globals": {
-    "ngDefine": false,
-    "require": false,
-    "define": false,
-    "console": false
   },
-  "browser": true,
+  "browser": false,
+  "node": true,
   "indent": 2,
   "strict": true
 }
