fix(build): build cam-bpm-sdk-js before building cockpit

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "name": "camunda-cockpit-ui",
   "version": "7.3.0-SNAPSHOT",
   "private": true,
+  "scripts": {
+    "win-build-sdk": "cd \"node_modules\\grunt-cli\\bin\" && grunt --gruntfile=..\\..\\camunda-commons-ui\\node_modules\\camunda-bpm-sdk-js\\Gruntfile.js browserify:distAngular",
+    "build-sdk": "node_modules/grunt-cli/bin/grunt --gruntfile=node_modules/camunda-commons-ui/node_modules/camunda-bpm-sdk-js/Gruntfile.js browserify:distAngular"
+  },
   "gruntConfig": {
     "connectPort": 8030,
     "livereloadPort": 8031,
