--- a/client/pom.xml
+++ b/client/pom.xml
@@ -45,6 +45,12 @@
                     </exec>
                     <exec executable="cmd" failonerror="true">
                       <arg value="/c" />
+                      <arg value="npm" />
+                      <arg value="run-script" />
+                      <arg value="win-build-sdk" />
+                    </exec>
+                   <exec executable="cmd" failonerror="true">
+                      <arg value="/c" />
                       <arg value="node_modules\.bin\grunt.cmd" />
                       <arg value="build" />
                       <arg value="--color=false" />
@@ -83,6 +89,10 @@
                     <!-- run node build -->
                     <exec executable="npm" failonerror="true">
                       <arg value="install" />
+                    </exec>
+                    <exec executable="npm" failonerror="true">
+                      <arg value="run-script" />
+                      <arg value="build-sdk" />
                     </exec>
                     <exec executable="./node_modules/grunt-cli/bin/grunt" failonerror="true">
                       <arg value="build" />
