--- a/client/webapp/pom.xml
+++ b/client/webapp/pom.xml
@@ -152,6 +152,14 @@
         <filtering>true</filtering>
       </resource>
     </resources>
+
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -585,115 +593,33 @@
     <profile>
       <id>database</id>
       <build>
-        <testResources>
-          <testResource>
-            <directory>src/test/resources</directory>
-            <filtering>true</filtering>
-          </testResource>
-        </testResources>
         <plugins>
           <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
             <executions>
               <execution>
-                <id>database-test-create-schema</id>
+                <id>database-test-drop-schema-before-test</id>
                 <phase>process-test-classes</phase>
                 <goals>
-                  <goal>run</goal>
+                  <goal>java</goal>
                 </goals>
-                <configuration>
-                  <target>
-                    <echo message="updating configuration to db ${database.type}" />
-                    <copy file="target/test-classes/camunda.cfg.db.xml" tofile="target/test-classes/camunda.cfg.xml" overwrite="true" />
-
-                    <echo message="dropping schema in ${database.type}" />
-                    <java classname="org.camunda.bpm.engine.impl.db.DbSchemaDrop" classpathref="maven.test.classpath" />
-                  </target>
-                </configuration>
               </execution>
               <execution>
-                <id>database-test-drop-schema</id>
+                <id>database-test-drop-schema-after-test</id>
                 <phase>prepare-package</phase>
                 <goals>
-                  <goal>run</goal>
+                  <goal>java</goal>
                 </goals>
-                <configuration>
-                  <target>
-                    <echo message="dropping schema in ${database.type}" />
-                    <java classname="org.camunda.bpm.engine.impl.db.DbSchemaDrop" classpathref="maven.test.classpath" />
-                  </target>
-                </configuration>
               </execution>
             </executions>
+            <configuration>
+              <mainClass>org.camunda.bpm.engine.impl.db.DbSchemaDrop</mainClass>
+              <classpathScope>test</classpathScope>
+            </configuration>
           </plugin>
         </plugins>
       </build>
-    </profile>
-
-    <profile>
-      <id>oracle-11</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.oracle.jdbc</groupId>
-          <artifactId>ojdbc6</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>oracle-10</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.oracle.jdbc</groupId>
-          <artifactId>ojdbc14</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>db2</id>
-      <dependencies>
-        <dependency>
-          <groupId>com.ibm.db2.jcc</groupId>
-          <artifactId>db2jcc4</artifactId>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
-      <id>sqlserver</id>
-        <dependencies>
-          <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc4</artifactId>
-            <scope>test</scope>
-          </dependency>
-       </dependencies>
-    </profile>
-
-    <profile>
-      <id>mysql</id>
-        <dependencies>
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <scope>test</scope>
-          </dependency>
-       </dependencies>
-    </profile>
-
-    <profile>
-      <id>postgresql</id>
-      <dependencies>
-        <dependency>
-          <groupId>org.postgresql</groupId>
-          <artifactId>postgresql</artifactId>
-          <scope>test</scope>
-        </dependency>
-       </dependencies>
     </profile>
 
     <!-- profile for running cockpit testsuite with database table prefix -->
@@ -721,6 +647,7 @@
         </plugins>
       </build>
     </profile>
+
     <profile>
       <id>node-build-windows</id>
       <activation>
